# safetensors

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile.s390x.test  GOVERNANCE.md  MAINTAINERS.md  Makefile  PLAN_CUDA_FAST_PATH.md  README.md  RELEASE.md  SECURITY.md  flake.nix  package-lock.json  package.json  plan.md  task7_python_bindings.md  temp.md  test_windows_repro.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/conda/: bld.bat  build.sh  meta.yaml
.github/workflows/: build_documentation.yml  build_pr_documentation.yml  capi.yaml  codecov.yml  delete_doc_comment.yml  delete_doc_comment_trigger.yml  python-bench.yml  python-release-conda.yml  python-release-extra.yml  python-release.yml  python.yml  rust-release.yml  rust.yml  security-audit.yml  stale.yml  test_windows_gguf.yml  trufflehog.yml  upload_pr_documentation.yml
attacks/: README.md  numpy_dos_create.py  numpy_dos_get_pwned.py  paddle_ace_create.py  paddle_ace_get_pwned.py  safetensors_abuse_attempt_1.py  safetensors_abuse_attempt_2.py  safetensors_abuse_attempt_3.py  tf_ace_create.py  tf_ace_get_pwned.py  tf_safe_ace_create.py  tf_safe_ace_get_pwned.py  torch_ace_create.py  torch_ace_get_pwned.py  torch_dos_create.py  torch_dos_get_pwned.py
bindings/: README.md
bindings/c/: CMakeLists.txt  Cargo.toml  README.md  build.rs  safetensors.h
bindings/c/cmake/: build_rust.cmake  copy_rust_artifacts.cmake
bindings/c/examples/: CMakeLists.txt  Makefile  main.cpp  unix_mmap.h  windows_main.cpp  windows_mmap.h
bindings/c/include/safetensors/: safetensors.h
bindings/c/src/: lib.rs
bindings/c/tests/: CMakeLists.txt  safetensors_c_tests.cpp
bindings/python/: .gitignore  Cargo.toml  MANIFEST.in  Makefile  README.md  bench.py  build-sdist.sh  build-wheels.sh  build.rs  convert.py  convert_all.py  fuzz.py  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  stub.py  test.py
bindings/python/benches/: bench_load_gpu.py  bench_mps_load.py  bench_mps_load_cold.sh  bench_multi_gpu.py  bench_tp.py  bench_vs_transformers.py  benchmark_multi_gpu.py  test_cuda_load.py  test_flax.py  test_gds.py  test_mlx.py  test_multi_device.py  test_odirect_correctness.py  test_paddle.py  test_pt.py  test_tf.py
bindings/python/py_src/safetensors/: __init__.py  __init__.pyi  _fast_cuda.py  flax.py  mlx.py  numpy.py  numpy_functions.py  paddle.py  tensorflow.py  torch.py  torch_functions.py
bindings/python/src/: dlpack.rs  hmll.rs  lib.rs  metal.rs  view.rs
bindings/python/src/gds/: bindings.rs  driver.rs  error.rs  handle.rs  mod.rs  storage.rs
bindings/python/src/pipeline/: cuda.rs  dlpack.rs  error.rs  iouring.rs  mod.rs  numa.rs
bindings/python/src/pipeline/cuda/: mod.rs  sys.rs
bindings/python/tests/: test_comparison.py  test_fast_cuda.py  test_flax_comparison.py  test_gds.py  test_handle.py  test_ml_dtypes.py  test_mlx_comparison.py  test_multithreaded.py  test_no_mmap.py  test_paddle_comparison.py  test_pipeline.py  test_pread_backend.py  test_pt.py  test_pt_comparison.py  test_pt_model.py  test_read_file_backend.py  test_safetensor_error_pickle.py  test_simple.py  test_strided_slice.py  test_tf_comparison.py  test_threadable.py
dev/bench/: data.js
docs/: safetensors.schema.json
docs/source/: _toctree.yml  convert-weights.md  index.mdx  metadata_parsing.mdx  speed.mdx  torch_shared_tensors.mdx
docs/source/api/: flax.mdx  numpy.mdx  paddle.mdx  tensorflow.mdx  torch.mdx
ionic-rs/: Cargo.toml
ionic-rs/src/: dlpack.rs  error.rs  lib.rs  numa.rs  pipeline.rs
ionic-rs/src/cuda/: mod.rs  sys.rs
ionic-rs/src/iouring/: coalesce.rs  mod.rs
ionic-rs/tests/: cuda.rs  iouring.rs  numa.rs  pipeline.rs
js/: Counter.ts  remote-parse.ts
safetensors/: Cargo.toml  README.md  README.tpl  build.rs  lcov.info
safetensors/benches/: bench_utils.rs  benchmark.rs  cuda_benchmark.rs  loader_benchmark.rs
safetensors/fuzz/: Cargo.toml
safetensors/fuzz/fuzz_targets/: fuzz_target_1.rs  structured_roundtrip.rs
safetensors/src/: device_map.rs  index.rs  lib.rs  loader.rs  shard_plan.rs  slice.rs  tensor.rs
safetensors/src/loader/: buffer.rs  cuda.rs  cufile.rs  mmap.rs  mod.rs  scatter.rs
samples/: B.safetensors  H.safetensors  I.safetensors  ReadMe.md  b.safetensors  d.safetensors  e.safetensors  f.safetensors  generate.py  h.safetensors  i.safetensors  overall.safetensors
