[package]
name = "ionic-rs"
version = "0.1.0-dev.0"
edition = "2021"
rust-version = "1.80"
description = """
Pure-Rust port of Morgan Funtowicz's `ionic` C library
(https://github.com/huggingface/ionic): an io_uring-based read engine with
registered pinned staging buffers + a CUDA driver-API wrapper, designed for
saturating PCIe with safetensors weight loads. Used by `safetensors-python`'s
opt-in `prefetch()` fast path.
"""
license = "Apache-2.0"
keywords = ["io_uring", "cuda", "safetensors", "loading"]

# Linux-only: io_uring is a Linux kernel interface. The build will fail on
# other platforms; consumers should cfg-gate their use of this crate behind
# `target_os = "linux"`.
[dependencies]
io-uring = "0.7"
libc = "0.2"
libloading = "0.9"

[dev-dependencies]
tempfile = "3"
