[package]
name = "c"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "safetensors"
crate-type = ["cdylib"]      # Creates dynamic lib

[profile.dev]
lto = "fat"

[profile.release]
opt-level = 3
lto = "fat"

[dependencies]
thiserror = "1.0"
safetensors = { path = "../../safetensors" }
