[package]
name = "c"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "safetensors"
crate-type = ["staticlib"]

[profile.dev]
lto = "fat"

[profile.release]
opt-level = 3
lto = "fat"

[dependencies]
thiserror = "1.0"
safetensors = { path = "../../safetensors" }

[build-dependencies]
cbindgen = "0.24.5"
