[package]
name = "c"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "safetensors"
crate-type = ["cdylib"]

[profile.release]
lto = "fat"

[dependencies]
thiserror = "1.0"
safetensors = { path = "../../safetensors" }

[build-dependencies]
cbindgen = "0.24.5"
