[package]
name = "safetensors-python"
version = "0.8.0-dev.0"
edition = "2021"
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "safetensors_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["abi3", "abi3-py310"] }
memmap2 = "0.9"
serde_json = "1.0"

[dependencies.safetensors]
path = "../../safetensors"

# Pipeline backend: Linux-only (io_uring is a Linux interface). On other OSes
# the whole `pipeline` module is cfg-gated out and `safe_open.prefetch()` is
# absent from the class — callers can `hasattr` to detect support. CUDA is
# discovered at runtime via libloading, not linked at build time, so one
# wheel works on Linux with and without CUDA present.
[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"
libc = "0.2"
libloading = "0.9"
