[package]
name = "safetensors-python"
version = "0.8.0-dev.0"
edition = "2021"
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "safetensors_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["abi3", "abi3-py310"] }
memmap2 = "0.9"
serde_json = "1.0"

[dependencies.safetensors]
path = "../../safetensors"
