[package]
name = "safetensors-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = "1"
libfuzzer-sys = "0.4"

[dependencies.safetensors]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false

[[bin]]
name = "structured_roundtrip"
path = "fuzz_targets/structured_roundtrip.rs"
test = false
doc = false
